blog/blog-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blog
  labels:
    name: blog
    app: blog

spec:
  template:
    metadata:
      labels:
        name: blog
        app: blog
    spec:
      containers:
      - name: blog
        image: bencord0/blog
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
        volumeMounts:
        - name: conf
          mountPath: /conf
      volumes:
      - name: conf
        hostPath:
          path: /srv/conf
