blog/blog-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: blog
  labels:
    name: blog
    app: blog

spec:
  selector:
    name: blog
    app: blog
  clusterIP: 10.0.196.94
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
