blog/postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    name: postgres
    app: blog

spec:
  ports:
    - port: 5432
  selector:
    name: postgres
    app: blog
